# robot-browser-tests

./: .gitignore  README.md  log.html  output.xml  pyproject.toml  report.html
resource/: add_to_cart.resource  auth.resource
resource/constants/: add_to_cart_constants.resource  invalid_login_constants.resource  valid_login_constants.resource
resource/locators/: add_to_cart_locators.resource  invalid_login.resource  valid_login.resource
results/: log.html  output.xml  playwright-log.txt  report.html
tests/: add_to_cart_test.robot  auth_browser_test.robot
